@@ -1,3 +1,8 @@
+Apr 02 2006 <shlomif@iglu.org.il> (Shlomi Fish)
+
+  Error.pm #0.15004
+  - Added POD to the lib/Error/Simple.pm module.
+
 Mar 31 2006 <shlomif@iglu.org.il> (Shlomi Fish)
 
   Error.pm #0.15003
